--- a/Calculations/FMBSSFM/LaserDynamics.Calculations.FMBSsfmLaserModel.csproj
+++ b/Calculations/FMBSSFM/LaserDynamics.Calculations.FMBSsfmLaserModel.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{729BF411-0329-40D6-9311-C7F8B3AE967C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LaserDynamics.Calculations.FullMaxvellBlockSsfm</RootNamespace>
-    <AssemblyName>LaserDynamics.Calculations.FullMaxvellBlockSsfm</AssemblyName>
+    <RootNamespace>LaserDynamics.Calculations.FMBSsfmLaserModel</RootNamespace>
+    <AssemblyName>LaserDynamics.Calculations.FMBSsfmLaserModel</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -51,7 +51,7 @@
     <Compile Include="Ssfm1dWorkspace.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\LaserDynamics.Common\LaserDynamics.Common.csproj">
+    <ProjectReference Include="..\..\LaserDynamics.Common\LaserDynamics.Common.csproj">
       <Project>{ddada084-96a5-4fb2-943f-02ac8ba97aea}</Project>
       <Name>LaserDynamics.Common</Name>
     </ProjectReference>
