+ graph results logic

--- a/LaserDynamics.Common/LaserDynamics.Common.csproj
+++ b/LaserDynamics.Common/LaserDynamics.Common.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Complex">
+      <HintPath>..\..\..\Libs\jenyay.mathematics\Complex\bin\Release\Complex.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,12 +43,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attributes\DisplayTitleAttribute.cs" />
+    <Compile Include="Attributes\ResultsTypeAttribute.cs" />
     <Compile Include="Attributes\ValidateElementAttribute.cs" />
+    <Compile Include="CNumberResult.cs" />
     <Compile Include="Interfaces\Client\ILaserCalculator.cs" />
     <Compile Include="Interfaces\Client\ILaserModelAccessor.cs" />
     <Compile Include="Interfaces\Service\ICalculation.cs" />
     <Compile Include="Interfaces\Service\ICalculationView.cs" />
     <Compile Include="Interfaces\Service\ICalculationWorkspace.cs" />
+    <Compile Include="PlotResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
