+ new markup + tree view

--- a/Clients/LaserDynamics.Clients.WinForms/LaserDynamics.Clients.WinForms.csproj
+++ b/Clients/LaserDynamics.Clients.WinForms/LaserDynamics.Clients.WinForms.csproj
@@ -67,6 +67,9 @@
     <Compile Include="Presenter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TreeViewLogic.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
