--- a/Clients/LaserDynamics.Clients.WinForms/LaserDynamics.Clients.WinForms.csproj
+++ b/Clients/LaserDynamics.Clients.WinForms/LaserDynamics.Clients.WinForms.csproj
@@ -57,17 +57,26 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreatingControls.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Extensions.cs" />
+    <Compile Include="Images.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="ModelTreeLogic.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Presenter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TreeViewLogic.cs">
+    <Compile Include="FileTreeLogic.cs">
       <SubType>Form</SubType>
     </Compile>
     <EmbeddedResource Include="Main.resx">
