--- a/Clients/LaserDynamics.Clients.WinForms/LaserDynamics.Clients.WinForms.csproj
+++ b/Clients/LaserDynamics.Clients.WinForms/LaserDynamics.Clients.WinForms.csproj
@@ -32,11 +32,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Complex">
-      <HintPath>..\..\..\Интеграция с МАТЛАБ\Jenyay\jenyay.mathematics\bin\Release\Complex.dll</HintPath>
+    <Reference Include="Complex, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Release\Complex.dll</HintPath>
     </Reference>
-    <Reference Include="Fourier">
-      <HintPath>..\..\..\Интеграция с МАТЛАБ\Jenyay\jenyay.mathematics\bin\Release\Fourier.dll</HintPath>
+    <Reference Include="Fourier, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Release\Fourier.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Newtonsoft.Json">
